--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <meta name="description" content="Tech Solution offers expert IT support software troubleshooting,firewall installation, restore tools and digital services for businesses and individuals. Fast, reliable, and secure tech solutions you trust">
 
+  <meta name="google-site-verification" content="ixRK7lD53RSuGH4ZykenT3w3qcXmFhF2hfhO_rKOkBg" />
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
