--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   </div>
 
   <div class="rights">
-      <h3>Copyright © Reserved By AI Consultency 2024</h3>
+      <h3>Copyright © Reserved By SR Consultency 2025</h3>
   </div>
 
 </footer>
